Integrating checker framework