@@ -14,6 +14,86 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <profiles>
+        <profile>
+        <id>checkerframework</id>
+        <activation>
+            <jdk>[1.8,)</jdk>
+        </activation>
+        <build>
+            <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
+                <meminitial>1000m</meminitial>
+                <maxmem>4000m</maxmem>
+                <compilerArguments>
+                    <Xmaxerrs>10000</Xmaxerrs>
+                    <Xmaxwarns>10000</Xmaxwarns>
+                </compilerArguments>
+                <annotationProcessorPaths>
+                    <path>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker</artifactId>
+                    <version>3.26.0</version>
+                    </path>
+                </annotationProcessorPaths>
+                <annotationProcessors>
+                    <!-- Add all the checkers you want to enable here -->
+                    <annotationProcessor>org.checkerframework.checker.tainting.TaintingChecker</annotationProcessor>
+                </annotationProcessors>
+                <compilerArgs>
+                    <!-- -Awarns turns type-checking errors into warnings. -->
+                    <arg>-Awarns</arg> 
+                </compilerArgs>
+                </configuration>
+            </plugin>
+            </plugins>
+        </build>
+        <dependencies>
+            <dependency>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>checker</artifactId>
+            <version>3.26.0</version>
+            </dependency>
+        </dependencies>
+        </profile>
+
+        <profile>
+        <id>checkerframework-jdk9orlater</id>
+        <activation>
+        <jdk>[9,)</jdk>
+        </activation>
+        <build>
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+            <fork>true</fork>
+            <compilerArgs combine.children="append">
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+            </compilerArgs>
+            </configuration>
+        </plugin>
+        </plugins>
+        </build>
+        <properties>
+            <!-- Needed for animal-sniffer-maven-plugin version 1.19 (version 1.20 is fixed). -->
+            <animal.sniffer.skip>true</animal.sniffer.skip>
+        </properties>
+        </profile>
+    </profiles>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -300,6 +380,13 @@
             <version>4.0.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.checkerframework/checker-qual -->
+        <dependency>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>checker-qual</artifactId>
+            <version>3.26.0</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -316,7 +403,40 @@
 
     <!-- jar -->
     <build>
+        <!--http://anthonywhitford.com/lombok.maven/lombok-maven-plugin/faq.html#alt-src-setup-->
+        <sourceDirectory>${project.build.directory}/generated-sources/delombok</sourceDirectory>
+        <testSourceDirectory>${project.build.directory}/generated-test-sources/delombok</testSourceDirectory>        
         <plugins>
+            <plugin>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok-maven-plugin</artifactId>
+                <version>1.18.20.0</version>
+                <executions>
+                    <execution>
+                        <id>delombok</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>delombok</goal>
+                        </goals>
+                        <configuration>
+                            <addOutputDirectory>false</addOutputDirectory>
+                            <sourceDirectory>src/main/java</sourceDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>test-delombok</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>testDelombok</goal>
+                        </goals>
+                        <configuration>
+                            <addOutputDirectory>false</addOutputDirectory>
+                            <sourceDirectory>src/test/java</sourceDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
